# modular_tree

./: README.md  build_mtree.osx  build_mtree.sh
.github/workflows/: CD.yml
m_tree/: CMakeLists.txt  install.py
m_tree/python_bindings/: CMakeLists.txt
m_tree/source/: CMakeLists.txt
m_tree/tests/: CMakeLists.txt
python_classes/nodes/tree_function_nodes/: tree_mesher_node.py
python_classes/resources/: resource_utils.py
